--- a/public/front第一遍/css/search.css
+++ b/public/front第一遍/css/search.css
@@ -1,35 +1,55 @@
 /* 搜索框设置 */
 
 .lt_search {
-  padding: 10px;
-  position: relative;
+    padding: 10px;
+    position: relative;
 }
 
 .lt_search input {
-  height: 34px;
-  border-radius: 5px;
-  font-size: 12px;
-  border: 1px solid #007aff;
-  margin: 0;
+    height: 34px;
+    border-radius: 5px;
+    font-size: 12px;
+    border: 1px solid #007aff;
+    margin: 0;
 }
 
 .lt_search button {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  border-radius: 0px 5px 5px 0px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    border-radius: 0px 5px 5px 0px;
 }
 
 .lt_content {
-  padding: 10px;
+    padding: 10px;
 }
 
 .lt_title {
-  height: 30px;
-  line-height: 30px;
+    height: 30px;
+    line-height: 30px;
 }
 
 .lt_title span {
-  font-size: 12px;
-  color: #666;
+    font-size: 12px;
+    color: #666;
+}
+
+.lt_history ul {
+    border: 1px dashed red;
+}
+
+.lt_history ul li {
+    height: 30px;
+    line-height: 30px;
+    padding: 0 10px;
+    border-bottom: 1px dashed red;
+}
+
+.lt_history ul li:last-child {
+    border-bottom: none;
+}
+
+.lt_history ul li a {
+    font-size: 12px;
+    display: block;
 }
